--- a/App/templates/combo/modificarCombo.html
+++ b/App/templates/combo/modificarCombo.html
@@ -3,7 +3,37 @@
 {% include 'header/header.html' %}
 
 <body>
-    {% include 'navbars/navbar.html' %}
+
+    <div class="d-flex" id="wrapper">
+        {% include 'navbars/sidebar.html' %}
+
+        <div id="page-content-wrapper">
+            {% include 'navbars/navbar.html' %}
+            <div class="container p-2">
+                <h2>Modificar Combo</h2>
+                <form action="{{ url_for('editarCombo') }}" method="POST">
+                    <div class="form-group">
+                        <input value="{{id}}" type="hidden" class="form-control" name="id" id="id" placeholder="Id del combo a modificar">
+                    </div>
+                    <div class="form-group">
+                        <label for="nombre">Nombre del combo a modificar</label>
+                        <input readonly value="{{data[0][1]}}" type="text" class="form-control" name="nombre" id="nombre">
+                    </div>
+                    <div class="form-group">
+                        <label for="nombreNuevo">Nuevo nombre del combo</label>
+                        <input type="text" class="form-control" name="nombreNuevo" id="nombreNuevo" placeholder="Nuevo nombre del combo">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Aceptar</button>
+                    <a class="btn btn-danger" href="/" role="button">Cancelar</a>
+                </form>
+
+
+            </div>
+        </div>
+    </div>
+
+
+<!--     {% include 'navbars/navbar.html' %}
     <div class="container p-2">
         <h2>Modificar combo</h2>
         <form action="editarCombo" method="POST">
@@ -29,6 +59,6 @@
 
 
     </div>
-</body>
+ --></body>
 
 </html>
