--- a/App/templates/tipoProducto/tipoProductoABMC.html
+++ b/App/templates/tipoProducto/tipoProductoABMC.html
@@ -10,7 +10,7 @@
             {% include 'navbars/navbar.html' %}
 
             <div class="container-fluid">
-                {% if data == "elimido" %}
+                {% if data == "eliminado" %}
                 <div class="row">
                     <div class="col-md-12">
                         <div class="m-2 alert alert-success alert-dismissible fade show" role="alert">
