--- a/App/templates/producto/productoABMC.html
+++ b/App/templates/producto/productoABMC.html
@@ -36,7 +36,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="m-2 alert alert-danger alert-dismissible fade show" role="alert">
-                            <strong>La Producto Ya Existe!</strong>
+                            <strong>El Producto Ya Existe!</strong>
                             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                         </button>
