--- a/App/templates/navbars/sidebar.html
+++ b/App/templates/navbars/sidebar.html
@@ -8,7 +8,7 @@
         <a href="{{ url_for('tipoProductoABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-laptop"></i> Tipo de Productos <i class="fas fa-angle-right"></i></a>
         <a href="{{ url_for('marcaABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-copyright"></i> Marca <i class="fas fa-angle-right"></i></a>
         <a href="{{ url_for('productoABMC') }}" class="list-group-item list-group-item-action bg-light"> <i class="fab fa-product-hunt"></i> Producto <i class="fas fa-angle-right"></i></a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">----</a>
+        <!--<a href="#" class="list-group-item list-group-item-action bg-light">----</a>-->
         <a href="{{ url_for('comboABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-layer-group"></i> Combos <i class="fas fa-angle-right"></i></a>
         <a href="#" class="list-group-item list-group-item-action bg-light">----</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">----</a>
