AMBC productos completo

--- a/App/templates/producto/modificarProducto.html
+++ b/App/templates/producto/modificarProducto.html
@@ -90,6 +90,18 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="row">
+                        <div class="col-md-6">
+
+                        </div>
+
+
+                        <div class="col-md-6">
+                            <a type="" class="btn btn-susses"> + Ejemplare </a>
+                        </div>
+                    </div>
+
                     <button type="submit" class="btn btn-primary">Aceptar</button>
                     <a class="btn btn-danger" href="/" role="button">Cancelar</a>
                 </form>
