--- a/App/templates/producto/modificarProducto.html
+++ b/App/templates/producto/modificarProducto.html
@@ -98,7 +98,7 @@
 
 
                         <div class="col-md-6">
-                            <a type="" class="btn btn-susses"> + Ejemplare </a>
+                            <a href="javascript:alert('PARA AGREGAR ejemplares a Futuro...');" class="btn btn-success"> + Ejemplare </a>
                         </div>
                     </div>
 
