--- a/App/templates/ejemplar/altaEjemplar.html
+++ b/App/templates/ejemplar/altaEjemplar.html
@@ -13,11 +13,20 @@
             </div>
             <div class="form-group">
                 <label for="vendido">¿Producto vendido? (0: False - 1:True)</label>
-                <input type="text" class="form-control" name="vendido" id="vendido" placeholder="true or false">
+                <select name="vendido" class="custom-select">
+                    <option value="0">No - (False)</option>
+                    <option value="1">Si - (True)</option>
+                </select>
+
             </div>
             <div class="form-group">
-                <label for="producto">ID del Producto</label>
-                <input type="number" class="form-control" name="producto" id="producto" placeholder="Ingresar el código del producto del ejemplar">
+                <label for="producto">Producto</label>
+                <select name="producto" class="custom-select">
+                    {% for e in data %}                        
+                            <option value="{{e[0]}}">{{e[1]}}</option>                        
+                    {% endfor %}
+                </select>
+
             </div>
             <button type="submit" class="btn btn-primary">Aceptar</button>
             <a class="btn btn-danger" href="/" role="button">Cancelar</a>
