--- a/App/templates/navbars/navbar.html
+++ b/App/templates/navbars/navbar.html
@@ -5,10 +5,10 @@
             </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <!--<li class="nav-item active">
+            <li class="nav-item active">
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
-        -->
+
 
 
             <!--MARCA-->
@@ -18,7 +18,7 @@
 
             <!--/PRODUCTO-->
             <!--EJEMPLAR-->
-            <li class="nav-item dropdown">
+            <!--<li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Ejemplar ABMC
                 </a>
@@ -31,10 +31,10 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{{ url_for('listarEjemplar') }}">Consulta(Lista)</a>
                 </div>
-            </li>
+            </li>-->
             <!--/EJEMPLAR-->
             <!--COMBO-->
-            <li class="nav-item dropdown">
+            <!--<li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Combo ABMC
                 </a>
@@ -47,7 +47,7 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{{ url_for('listarCombo') }}">Consulta(Lista)</a>
                 </div>
-            </li>
+            </li>-->
             <!--/COMBO-->
 
             <!--CARRITO-->
