--- a/App/templates/navbars/sidebar_usuarios.html
+++ b/App/templates/navbars/sidebar_usuarios.html
@@ -3,7 +3,7 @@
     <div class="list-group list-group-flush">
         <a href="{{ url_for('listarProductos') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-home"></i> Inicio <i class="fas fa-angle-right"></i> </a>
         <a href="{{ url_for('listarTipoProducto') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-user"></i> Categorías <i class="fas fa-angle-right"></i> </a>
-        <a href="{{ url_for('listarTipoProducto') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-copyright"></i> Marcas <i class="fas fa-angle-right"></i></a>
+        <a href="{{ url_for('listadoMarcas') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-copyright"></i> Marcas <i class="fas fa-angle-right"></i></a>
         <a href="{{ url_for('comboABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-layer-group"></i> Combos <i class="fas fa-angle-right"></i></a>
         <a href="{{ url_for('marcaABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-copyright"></i> Preguntas frecuentes <i class="fas fa-angle-right"></i></a>       
     </div>
