--- a/App/templates/combo/listadoCombo.html
+++ b/App/templates/combo/listadoCombo.html
@@ -2,12 +2,53 @@
 <html lang="en">
 {% include 'header/header.html' %}
 
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
+<style>
+  .card-deck{
+    margin-right:400px;
+    margin-bottom:20px;
+    margin-left:400px;
+    border-bottom:50px;
+    background-color: black;
+  }
+  .btn-success{
+    background-color: black;
+    font-size: 20px;
+    margin-right:5px;
+    margin-left:5px;
+    margin-bottom:5px;
+    margin-top: 5px;
+  }
+</style>
+
 <body>
-    <ul>
-        {% for e in data %}
-        <li>{{ e[1] }}</li>
-        {% endfor %}
-    </ul>
+
+    <div class="d-flex" id="wrapper">
+        {% include 'navbars/sidebar_usuarios.html' %}
+
+        <div id="page-content-wrapper">
+            {% include 'navbars/navbar.html' %}
+            <div class="container p-2">
+              {% for e in data:%}
+              <div class="card-deck">
+                  <div class="card">
+                    <img src="static/img/g1_demos.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <center>
+                        <h5 class="card-title">{{e[1]}}</h5>
+                        <p class="card-text"><h5>${{e[4]}}</h5></p>
+                        <a href="{{ url_for('mostrarComboAlUsuario')}}/{{e[0]}}" class="btn btn-success"><span class="fa fa-info-circle"></span></a>
+                        <a href="{{ url_for('verProducto') }}" class="btn btn-success"><span class="fa fa-cart-plus"></span></a>
+                      </center>
+                    </div>
+                  </div>
+              </div>
+              {%endfor%} 
+            </div>
+            {% include 'footer/footer.html' %}
+        </div>
+    </div>
 
 </body>
 
