--- a/App/templates/navbars/sidebar_usuarios.html
+++ b/App/templates/navbars/sidebar_usuarios.html
@@ -5,6 +5,6 @@
         <a href="{{ url_for('listarTipoProducto') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-user"></i> Categorías <i class="fas fa-angle-right"></i> </a>
         <a href="{{ url_for('listadoMarcas') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-copyright"></i> Marcas <i class="fas fa-angle-right"></i></a>
         <a href="{{ url_for('listarCombo') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-layer-group"></i> Combos <i class="fas fa-angle-right"></i></a>
-        <a href="{{ url_for('marcaABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-copyright"></i> Preguntas frecuentes <i class="fas fa-angle-right"></i></a>       
+        <a href="{{ url_for('preguntas_frecuentes') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-copyright"></i> Preguntas frecuentes <i class="fas fa-angle-right"></i></a>       
     </div>
 </div>
