Se agregar footer para usuario

--- a/App/templates/cliente/faq.html
+++ b/App/templates/cliente/faq.html
@@ -62,8 +62,10 @@
                     <p>En ese caso debe escribirnos al correo ventas@gmailcom.</p>
                 </details>
                 
+                
             </div>
-        
+            
             </div>
+            {% include 'footer/footer-usuario.html' %}
     </body>
 </html>
