Se agregar sección de contacto en usuario

--- a/App/templates/combo/listadoCombo.html
+++ b/App/templates/combo/listadoCombo.html
@@ -46,10 +46,10 @@
               </div>
               {%endfor%} 
             </div>
-            {% include 'footer/footer.html' %}
         </div>
     </div>
-
+    
+    {% include 'footer/footer-usuario.html' %}
 </body>
 
 </html>
