--- a/App/templates/marca/listadoMarca.html
+++ b/App/templates/marca/listadoMarca.html
@@ -27,7 +27,7 @@
           </div>
       </div>
   </div>
-  {% include 'footer/footer.html' %}
+  {% include 'footer/footer-usuario.html' %}
 </body>
 
 </html>
