--- a/App/templates/combo/mostrarComboAlUsuario.html
+++ b/App/templates/combo/mostrarComboAlUsuario.html
@@ -66,7 +66,7 @@
             </div>
         </div>
     </div>
-    {% include 'footer/footer.html' %}
+    {% include 'footer/footer-usuario.html' %}
 </body>
 
 
