--- a/App/templates/navbars/sidebar_usuarios.html
+++ b/App/templates/navbars/sidebar_usuarios.html
@@ -1,10 +1,12 @@
 <div class="bg-light border-right" id="sidebar-wrapper">
     <a class="navbar-brand mb-0 h1 p-2" href="/"> <i class="fas fa-keyboard"></i> App Taller 2019</a>
     <div class="list-group list-group-flush">
-        <a href="{{ url_for('listarProductos') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-home"></i> Inicio <i class="fas fa-angle-right"></i> </a>
-        <a href="{{ url_for('listarTipoProducto') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-user"></i> Categorías <i class="fas fa-angle-right"></i> </a>
-        <a href="{{ url_for('listadoMarcas') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-copyright"></i> Marcas <i class="fas fa-angle-right"></i></a>
-        <a href="{{ url_for('listarCombo') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-layer-group"></i> Combos <i class="fas fa-angle-right"></i></a>
-        <a href="{{ url_for('preguntas_frecuentes') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-question"></i> Preguntas frecuentes <i class="fas fa-angle-right"></i></a>       
+        <a href="{{ url_for('listarProductos') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-home"></i> Inicio</a>
+        <a href="{{ url_for('listarTipoProducto') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-user"></i> Categorías </a>
+        <a href="{{ url_for('listadoMarcas') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-copyright"></i> Marcas </a>
+        <a href="{{ url_for('listarCombo') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-layer-group"></i> Combos </a>
+        <a href="{{ url_for('preguntas_frecuentes') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-question"></i> Preguntas frecuentes</a> 
+        <a href="{{ url_for('contacto') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-phone-alt"></i> Contacto </a> 
+              
     </div>
 </div>
