--- a/App/templates/producto/productos.html
+++ b/App/templates/producto/productos.html
@@ -50,7 +50,7 @@
         </div>
     </div>
 
-    {% include 'footer/footer.html' %}
+    {% include 'footer/footer-usuario.html' %}
 </body>
 
 </html>
