se quito redireccion, sando form, esta funcionando el login firebasr

--- a/App/templates/login/login.html
+++ b/App/templates/login/login.html
@@ -24,7 +24,8 @@
 
 <body>
     <div class="container">
-        <form class="form-signin">
+        <h1 style="color: red;">[ver login andrea: login_andrea.html]</h1>
+        <div class="form-signin">
             <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
             <h1 class="h3 mb-3 font-weight-normal">Binvenido</h1>
 
@@ -49,7 +50,7 @@
                 </div>
             </div>
 
-        </form>
+        </div>
     </div>
 
     <script>
