--- a/App/templates/navbars/navbar.html
+++ b/App/templates/navbars/navbar.html
@@ -105,6 +105,6 @@
 
     </div>
     <span class="navbar-text">
-        <a href="#">Login</a>
+        <a href="/login">Login</a>
       </span>
 </nav>
