se quito redireccion, sando form, esta funcionando el login firebasr,BOTONES  REDES SOCIALES

--- a/App/templates/login/login.html
+++ b/App/templates/login/login.html
@@ -22,10 +22,10 @@
 
 </head>
 
-<body>
+<body background="/static/img/fondo-login.png">
     <div class="container">
         <h1 style="color: red;">[ver login andrea: login_andrea.html]</h1>
-        <div class="form-signin">
+        <div class="form-signin form-group">
             <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
             <h1 class="h3 mb-3 font-weight-normal">Binvenido</h1>
 
@@ -49,8 +49,15 @@
                     <button id="btnSingOut" class="btn btn-lg btn-danger btn-block ">Sign Out</button>
                 </div>
             </div>
+            <div class="row">
+                <button class="btn btn-primary" id="loginFacebook"> <i class="fab fa-facebook-square"></i> Facebook</button>
+
+                <button class="btn btn-primary" id="loginGoogle"> <i class="fab fa-google"></i> Google</button>
+                <h1 style="color:yellow;">[REDES SOCIALES]</h1>
+            </div>
 
         </div>
+
     </div>
 
     <script>
