--- a/App/templates/navbars/navbar.html
+++ b/App/templates/navbars/navbar.html
@@ -105,6 +105,9 @@
 
     </div>
     <span class="navbar-text">
+        <a href="/cliente">Vista cliente</a>
+      </span>
+    <span class="navbar-text">
         <a href="/login">Login</a>
       </span>
 </nav>
