se quito redireccion, sando form, esta funcionando el login firebasr,BOTONES  REDES SOCIALES, pendiente funcionalidad

--- a/App/templates/navbars/navbar.html
+++ b/App/templates/navbars/navbar.html
@@ -106,7 +106,7 @@
     </div>
     <span class="navbar-text">
         <a href="/cliente">Vista cliente</a>
-      </span>
+      </span>||
     <span class="navbar-text">
         <a href="/login">Login</a>
       </span>
