--- a/App/templates/login/login.html
+++ b/App/templates/login/login.html
@@ -1,67 +1,51 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Firebase</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
-    <!-- The core Firebase JS SDK is always required and must be listed first
-    <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
-
-    <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-auth.js"></script>
--->
-
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-
-
-</head>
+{% include 'header/header.html' %}
 
 <body background="/static/img/fondo-login.png">
     <div class="container">
-        <h1 style="color: red;">[ver login andrea: login_andrea.html]</h1>
-        <div class="form-signin form-group">
-            <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-            <h1 class="h3 mb-3 font-weight-normal">Binvenido</h1>
-
-            <div class="form-group">
-                <label for="inputEmail " class="sr-only ">Email address</label>
-                <input type="email " id="inputEmail" class="form-control " placeholder="Email address " required=" " autofocus=" ">
-            </div>
-            <div class="form-group ">
-                <label for="inputPassword " class="sr-only ">Password</label>
-                <input type="password" id="inputPassword" class="form-control " placeholder="Password">
-            </div>
-            <div class="row">
-
-                <div class="col">
-                    <button id="btnLogin" class="btn btn-lg btn-primary btn-block ">login</button>
+        <div class="jumbotron">
+            <h5 style="color: red;">[ver login andrea: login_andrea.html]</h5>
+            <div class="form-signin form-group">
+                <h1 class="h3 mb-3 font-weight-normal">Binvenido</h1>
+                <div class="form-group">
+                    <label for="inputEmail " class="sr-only ">Email</label>
+                    <input type="email " id="inputEmail" class="form-control " placeholder="Email address " required=" " autofocus=" ">
                 </div>
-                <div class="col">
-                    <button id="btnSingIn" class="btn btn-lg btn-success btn-block ">Sign in</button>
+                <div class="form-group ">
+                    <label for="inputPassword " class="sr-only ">Contraseña</label>
+                    <input type="password" id="inputPassword" class="form-control " placeholder="Password">
                 </div>
-                <div class="col">
-                    <button id="btnSingOut" class="btn btn-lg btn-danger btn-block ">Sign Out</button>
+                <div class="row">
+
+                    <div class="col">
+                        <button id="btnLogin" class="btn btn-lg btn-primary btn-block ">login</button>
+                    </div>
+                    <div class="col">
+                        <button id="btnSingIn" class="btn btn-lg btn-success btn-block ">Sign in</button>
+                    </div>
+                    <div class="col">
+                        <button id="btnSingOut" class="btn btn-lg btn-danger btn-block ">Sign Out</button>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <button id="btnFacebookSingIn" class="btn btn-lg btn-primary">
+                             <i class="fab fa-facebook-square"></i> Facebook
+                        </button>
+                    </div>
+                    <div class="col-6">
+                        <button id="btnGoogleSingIn" class="btn btn-lg btn-primary"> 
+                            <i class="fab fa-google"></i> Google
+                        </button>
+
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <button class="btn btn-primary" id="loginFacebook"> <i class="fab fa-facebook-square"></i> Facebook</button>
-
-                <button class="btn btn-primary" id="loginGoogle"> <i class="fab fa-google"></i> Google</button>
-                <h1 style="color:yellow;">[REDES SOCIALES]</h1>
-            </div>
-
         </div>
-
     </div>
 
-    <script>
-    </script>
 
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-auth.js"></script>
