--- a/App/templates/login/login.html
+++ b/App/templates/login/login.html
@@ -5,17 +5,17 @@
 
 <body background="/static/img/fondo-login.png">
     <div class="container">
-        <div class="jumbotron">
+        <div id="login_form" class="jumbotron">
             <h5 style="color: red;">[ver login andrea: login_andrea.html]</h5>
             <div class="form-signin form-group">
                 <h1 class="h3 mb-3 font-weight-normal">Binvenido</h1>
                 <div class="form-group">
                     <label for="inputEmail " class="sr-only ">Email</label>
-                    <input type="email " id="inputEmail" class="form-control " placeholder="Email address " required=" " autofocus=" ">
+                    <input type="email " id="inputEmail" class="form-control " placeholder="Email " required=" " autofocus=" ">
                 </div>
                 <div class="form-group ">
                     <label for="inputPassword " class="sr-only ">Contraseña</label>
-                    <input type="password" id="inputPassword" class="form-control " placeholder="Password">
+                    <input type="password" id="inputPassword" class="form-control " placeholder="Contraseña">
                 </div>
                 <div class="row">
 
